fix missing closing bracket

--- a/desktop/renderer/index.html
+++ b/desktop/renderer/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./fonticon.css" />
   </head>
   <body>
-    <div id="app"><div title="loading..." style="flex: 1;background-color: #f5f5f5"</div>
+    <div id="app"><div title="loading..." style="flex: 1;background-color: #f5f5f5"></div>
     <script>
       function logToElectron() {
         ['log', 'warn', 'error'].forEach(key => {
