--- a/desktop/renderer/launcher.html
+++ b/desktop/renderer/launcher.html
@@ -23,7 +23,7 @@ body {
   </head>
   <body>
     <div id="root">
-      <div title="loading..." style="flex: 1;background-color: #f5f5f5"</div>
+      <div title="loading..." style="flex: 1;background-color: #f5f5f5"></div>
     </div>
     <script>
       function logToElectron() {
