--- a/desktop/renderer/remoteComponent.html
+++ b/desktop/renderer/remoteComponent.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="remoteComponent">
-      <div title="loading..." style="flex: 1;background-color: #f5f5f5"</div>
+      <div title="loading..." style="flex: 1;background-color: #f5f5f5"></div>
     </div>
     <script>
       function logToElectron() {
