--- a/desktop/renderer/index.html
+++ b/desktop/renderer/index.html
@@ -7,8 +7,17 @@
     <link rel="stylesheet" href="./fonticon.css" />
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app"><div title="loading..." style="flex: 1;background-color: #f5f5f5"></div>
     <script>
+      function logToElectron() {
+        ['log', 'warn', 'error'].forEach(key => {
+          window.console[`_${key}`] = window.console[key]
+          window.console[key] = function() {
+            require('electron').ipcRenderer.send('console.' + key, Array.prototype.slice.call(arguments))
+          }
+        })
+      }
+      logToElectron()
       function getQueryVariable(variable) {
         var query = window.location.search.substring(1)
           var vars = query.split("&")
