--- a/desktop/renderer/launcher.html
+++ b/desktop/renderer/launcher.html
@@ -30,6 +30,7 @@ body {
         ['log', 'warn', 'error'].forEach(key => {
           window.console[`_${key}`] = window.console[key]
           window.console[key] = function() {
+            window.console[`_${key}`](...arguments)
             require('electron').ipcRenderer.send('console.' + key, Array.prototype.slice.call(arguments))
           }
         })
