--- a/desktop/renderer/renderer.html
+++ b/desktop/renderer/renderer.html
@@ -7,54 +7,19 @@
     <link rel="stylesheet" href="./fonticon.css" />
   </head>
   <body>
-    <div id="root"><div title="loading..." style="flex: 1;background-color: #f5f5f5"></div>
+    <div id="root">
+      <div title="loading..." style="flex: 1;background-color: #f5f5f5">
+    </div>
     <script>
-      const ipcRenderer = require('electron').ipcRenderer
-      const util = require('util')
-      function logToElectron() {
-        ['log', 'warn', 'error'].forEach(key => {
-          window.console[`_${key}`] = window.console[key]
-          window.console[key] = (...args) => {
-            window.console[`_${key}`](...args)
-            const toSend = util.inspect(args)
-            ipcRenderer.send('console.' + key, toSend)
-          }
+      require('electron').ipcRenderer.once('load', (event, options) => {
+        document.title = options.title || document.title
+        options.scripts.forEach(src => {
+          const script = document.createElement('script')
+          script.src = src
+          script.onload = () => window.load && window.load(options)
+          document.head.appendChild(script)
         })
-      }
-      logToElectron()
-
-      function getQueryVariable(variable) {
-        var query = window.location.search.substring(1)
-          var vars = query.split("&")
-          for (var i=0;i<vars.length;i++) {
-            var pair = vars[i].split("=")
-              if(pair[0] == variable){
-                return pair[1]
-              }
-          }
-        return false
-      }
-
-      const __DEV__ = getQueryVariable('dev') === 'true'
-
-      function loadEntryChunk () {
-        var script = document.createElement('script')
-        script.src = getQueryVariable('src')
-        document.head.appendChild(script)
-      }
-
-      // Use vendor.js
-      if (__DEV__) {
-        var vendor = document.createElement('script')
-        vendor.onload = loadEntryChunk
-        // In case we don't have a dll, we just load the main entry chunk
-        // This happens when we don't use a DLL
-        vendor.onerror = loadEntryChunk
-        vendor.src = '../dist/dll/dll.vendor.js'
-        document.head.appendChild(vendor)
-      } else {
-        loadEntryChunk()
-      }
+      })
     </script>
   </body>
 </html>
