Add emoji picker popup

--- a/desktop/renderer/renderer.html
+++ b/desktop/renderer/renderer.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <title>Keybase</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="../node_modules/emoji-mart/css/emoji-mart.css" />
   </head>
   <body>
     <div id="root">
