--- a/desktop/renderer/renderer.html
+++ b/desktop/renderer/renderer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" http-equiv="Content-Security-Policy" content="default-src filesystem: http://localhost:4000 https://keybase.io/; img-src https://keybase.io/ https://pbs.twimg.com/ https://avatars.githubusercontent.com/ https://images.coinbase.com/ https://s3.amazonaws.com/keybase_processed_uploads/ file:; style-src 'unsafe-inline'; script-src file: http://localhost:4000 'unsafe-eval' 'sha256-Zb8Tvqopq928KRdsoNdWXBvYYljHYxHPD6bx7PFlpEA='"/>
     <title>Keybase</title>
   </head>
   <body>
